docs: add Groups info on Swagger.docs
